# OSi

./: CMakeLists.txt
laba1/: child1.c  child2.c  parent.c
laba2/: laba.c
laba3/: child.c  parent.c
laba4/: blocks2n_allocator.c  blocks2n_allocator.h  main.c  twin_allocator.c  twin_allocator.h
